--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.5.2",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-dropdown": "^1.6.2",
+    "react-scripts": "2.0.5",
+    "react-sidebar": "^3.0.2",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
